# marionette-skeleton

./: .env.example  .gitignore  .mypy.ini  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
src/marionette/: __main__.py
src/marionette/application/dto/: embed.py  entrance.py  paparazzi.py  result.py
src/marionette/application/usecases/: entrance_usecase.py  exit_usecase.py  paparazzi_usecase.py
src/marionette/domain/: exceptions.py  repositories.py  roles.py  uow.py
src/marionette/domain/entities/: agency.py  character.py
src/marionette/domain/services/: roleplay_service.py
src/marionette/infrastructure/: config.py
src/marionette/infrastructure/cache/: redis.py
src/marionette/infrastructure/db/: manager.py
src/marionette/infrastructure/di/: container.py  db_provider.py  inject.py
src/marionette/infrastructure/repositories/: agency_repository.py  character_repository.py  redis_repository.py  uow.py
src/marionette/presentation/: colors.py  entrance_presenter.py  error_presenter.py  paparazzi_presenter.py  result_presenter.py
